add google analytics gtag.js

--- a/views/admin_event.hbs
+++ b/views/admin_event.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        {{> google_analytics}}
         {{> bootstrap}}        
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
         <link href="/css/admin.css" type="text/css" rel="stylesheet" />
