--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    {{> google_analytics}}
     {{> bootstrap}}
     <link href="/css/menu.css" type="text/css" rel="stylesheet" />
     <link href="/css/login.css" type="text/css" rel="stylesheet" />
