--- a/views/maps.hbs
+++ b/views/maps.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        {{> google_analytics}}
         <!-- Bootstrap CSS -->
                 {{> bootstrap}}
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
