--- a/views/admin_user.hbs
+++ b/views/admin_user.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        {{> google_analytics}}
         {{> bootstrap}}        
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
         <link href="/css/admin.css" type="text/css" rel="stylesheet" />
