--- a/views/event.hbs
+++ b/views/event.hbs
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    {{> google_analytics}}
     <!-- Bootstrap CSS -->
     {{> bootstrap}}
     <link href="/css/menu.css" type="text/css" rel="stylesheet" />
