--- a/style/event.css
+++ b/style/event.css
@@ -120,3 +120,31 @@ hr {
 	border-style: inset;
 	border-width: 1px;
   }
+
+#searchgroup {
+	overflow:hidden;
+    overflow-y: auto;
+    border: 2px solid;
+    border-color: #42daf5;
+    box-shadow: 3px 3px 0 #d1cfcf;
+    height: 42vh;
+}
+
+#SearchBar {
+	width: 100%;
+    color: rgb(38, 50, 56);
+    font-weight: 700;
+    font-size: 14px;		
+    background: rgba(136, 126, 126, 0.04);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.02);
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: left;
+    margin-bottom: 10px;
+    font-family: 'Ubuntu', sans-serif;
+}
