--- a/style/menu.css
+++ b/style/menu.css
@@ -56,7 +56,7 @@ body {
     background-image: url('/src/Home_background_landing_page_gradient.png');
     border-style: none;
     float: left;
-    width: 100vw;
+    width: 100%;
     padding: 10px 0px 10px 0px;
 }
 
