fix bugs and dynamic icons

--- a/views/event.hbs
+++ b/views/event.hbs
@@ -67,10 +67,10 @@
                             </label>
                         </div>
                         {{#each data}}
-                        <div class="inputGroup" id>
+                        <div class="inputGroup">
 
-                            <input type="checkbox" class="invis" value={{name}} id={{name}}>
-                            <label for={{name}}>{{name}}</label>
+                            <input type="checkbox" class="invis" value="{{name}}" id="{{name}}">
+                            <label for="{{name}}">{{name}}</label>
 
                         </div>
 
