--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -52,7 +52,7 @@
       style="font-size: 100px !important; font-family: Arial Narrow,Arial,sans-serif !important;  ">
       Love YOUR Free
       Time</h1>
-    <h3 style="font-size: 40px;">Get notified about local kids kids activities &amp events</h3>
+    <h3 style="font-size: 40px;">Get notified about local kids activities &amp events</h3>
 
     <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top"
       style="background-color: #f907fc !important; border-radius: 20px;"><a href="/login"
